--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,8 +1,9 @@
-name: Build and Push Docker Image to GHCR
+name: Build and push to GHCR
 
 on:
- push:
-  branches: ["main"]
+  push:
+    branches: ["main"]
+  workflow_dispatch:
 
 jobs:
   build-and-push:
@@ -10,28 +11,38 @@ jobs:
 
     permissions:
       contents: read
-      packages: write   # necesario para subir a ghcr.io
+      packages: write
       id-token: write
-    
+
     steps:
-      - name: Checkout repo
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Log in to GitHub Container Registry
+
+      - name: Set image name
+        id: img
+        run: |
+          # github.repository = OWNER/REPO
+          IMAGE="ghcr.io/${GITHUB_REPOSITORY,,}"
+          echo "IMAGE=$IMAGE" >> $GITHUB_OUTPUT
+
+      - name: Get short SHA
+        id: vars
+        run: echo "SHORT_SHA=${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
+
+      - name: Login to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      
+
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          # Cambia <OWNER> por tu usuario u organización de GitHub
-          # y <REPO> por el nombre de este repo
           tags: |
-            ghcr.io/${{ github.repository_owner }}/<REPO>:latest
-            ghcr.io/${{ github.repository_owner }}/<REPO>:${{ steps.vars.outputs.SHORT_SHA }}
-          
+            ${{ steps.img.outputs.IMAGE }}:latest
+            ${{ steps.img.outputs.IMAGE }}:${{ steps.vars.outputs.SHORT_SHA }}
+       
